--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
 django == 4.2.16
+Jinja2 == 3.1.4
+pillow == 11.0
+pyodbc == 5.2.0
+django-fernet-fields2 == 0.6
+PyMySQL == 1.1.1
+django-betterforms == 2.0.0
+asgiref == 3.8.1
+sqlparse == 0.5.1
