--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pillow == 11.0
 pyodbc == 5.2.0
 django-fernet-fields2 == 0.6
 PyMySQL == 1.1.1
+mysqlclient == 2.2.5
 django-betterforms == 2.0.0
 asgiref == 3.8.1
 sqlparse == 0.5.1
