--- a/varhoundvenv/pyvenv.cfg
+++ b/varhoundvenv/pyvenv.cfg
@@ -1,5 +1,3 @@
-home = C:\Users\Huziel\AppData\Local\Programs\Python\Python313
+home = C:\Users\Zodux\AppData\Local\Programs\Python\Python39
 include-system-site-packages = false
-version = 3.13.0
-executable = C:\Users\Huziel\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\Huziel\AppData\Local\Programs\Python\Python313\python.exe -m venv C:\Users\Huziel\Desktop\Varhound\varhound\varhoundvenv
+version = 3.9.2
